# interview-comc

./: README.md  pyproject.toml
python/: .env.example  .gitignore  requirements.txt
python/src/: main.py
source/: comc.txt
typescript/: .gitignore  package.json
